feat: add Record class and methods